--- a/app/src/main/res/layout/fragment_batchlist.xml
+++ b/app/src/main/res/layout/fragment_batchlist.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent">
 
   <include
-      android:id="@+id/toolbar" layout="@layout/toolbar"/>
+      android:id="@+id/toolbar"
+      layout="@layout/toolbar" />
 
 
 
