--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -74,7 +74,7 @@
                                     android:layout_marginLeft="24dp"
                                     android:layout_marginRight="24dp"
                                     android:layout_weight="1.5"
-                                    android:text="Coching Profile"
+                                    android:text="Coaching Profile"
                                     android:textColor="@color/black" />
 
                                 <ImageView
