--- a/app/src/main/res/layout/toolbar_with_back.xml
+++ b/app/src/main/res/layout/toolbar_with_back.xml
@@ -28,11 +28,11 @@
             <ImageView
 
                 android:id="@+id/ivBackFullDescription"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_alignParentLeft="true"
                 android:padding="4dp"
-                android:src="@drawable/arrow_back_white"
-                android:layout_width="32dp"
-                android:layout_height="32dp"/>
+                android:src="@drawable/arrow_back_white" />
 
 
             <TextView
